2008-09-05  Martyn Russell  <martyn@imendio.com>

	* configure.ac: 
	* src/Makefile.am: Make Jamie's new tracker-fts/ directory disabled
	by default. Enabled with the --enable-sqlite-fts configure option.
	This breaks the build right now that's why it is disabled while it
	is under development. Also fixed make distcheck failures (tests
	still fail for some things).
	
	* src/libtracker-db/Makefile.am: Link with -lz so build doesn't fail.

	* tests/Makefile.am: Clean ups.

	* src/libtracker-db/tracker-db-index.c: (tracker_db_index_flush):
	Fixed build warnings.

	* tests/tracker-fts/Makefile.am: Fixed missing header file.

2008-09-05  Martyn Russell  <martyn@imendio.com>

	* src/libstemmer/*: Moved all source files into this directory,
	there is no need to have them all in separate directories. Make
	the library generated a shared library.
	
	* src/libtracker-common/Makefile.am:
	* src/libtracker-db/Makefile.am: Made libtracker-common and
	libtracker-db shared libraries.

	* src/libtracker-common/tracker-language.c: Fixed include paths.

2008-09-05  Mikael Ottela   <mikael.ottela@ixonos.com>

	* src/libtracker/tracker.h:
	* src/libtracker/tracker.c:
	* src/tracker-utils/tracker-unique.c:
	* src/trackerd/tracker-metadata.c:
	* src/trackerd/tracker-metadata.h:
	* data/dbus/tracker-metadata.xml: Added GetUniqueValueWithCount
	to metadata dbus. It is similar to previous GetUniqueValues,
	except if requested an additional count of items is returned.


2008-09-04  Martyn Russell  <martyn@imendio.com>

	* data/dbus/tracker-daemon.xml:
	* src/tracker-applet/Makefile.am:
	* src/tracker-applet/tracker-applet-marshallers.[ch]: 
	* src/trackerd/tracker-marshal.list:
	* src/trackerd/tracker-daemon.c: Include the elapsed time in
	seconds in the index-progress signal. 
	
	* src/tracker-applet/tracker-applet.c: Refactored the code a
	little and improved the status tooltip to include estimated time
	and elapsed time.
	
	* data/dbus/tracker-daemon.xml: